Crash when using "Set Vertex Colors" without a brush. #128257

Closed
opened 2024-09-27 15:45:31 +02:00 by Anirudh Vempati · 1 comment
Contributor

System Information
Operating system: Windows 10 Version 10.0.19045.4894
Graphics card: Nvidia

Blender Version
Broken: 4.3
Broken: 4.2
Worked: unknown

Short description of error
Clicking "Set Vertex Colors" in the Paint menu in Vertex Paint mode causes Blender to crash with the following error,

Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF60B77B604
Module  : blender.exe
Thread  : 0000098c
Writing: C:\Users\xxxxxx\AppData\Local\Temp\blender.crash.txt

Exact steps for others to reproduce the error
Use default startup cube.

  1. Use the dropdown at top left to change to Vertex Paint mode.
  2. Press Set Vertex Colors in the Paint menu.

The issue is due to a null pointer dereference in the call to IMB_colormanagement_srgb_to_scene_linear_v3 in vpaint_get_current_col in paint_vertex.cc. BKE_paint_brush_for_read returns a null pointer and as a result brush_color points to the zero page, thus causing a null pointer dereference and hence the access violation exception.

**System Information** Operating system: Windows 10 Version 10.0.19045.4894 Graphics card: Nvidia **Blender Version** Broken: 4.3 Broken: 4.2 Worked: unknown **Short description of error** Clicking "Set Vertex Colors" in the Paint menu in Vertex Paint mode causes Blender to crash with the following error, ``` Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF60B77B604 Module : blender.exe Thread : 0000098c Writing: C:\Users\xxxxxx\AppData\Local\Temp\blender.crash.txt ``` **Exact steps for others to reproduce the error** Use default startup cube. 1. Use the dropdown at top left to change to Vertex Paint mode. 2. Press Set Vertex Colors in the Paint menu. The issue is due to a null pointer dereference in the call to `IMB_colormanagement_srgb_to_scene_linear_v3` in `vpaint_get_current_col` in `paint_vertex.cc`. `BKE_paint_brush_for_read` returns a null pointer and as a result `brush_color` points to the zero page, thus causing a null pointer dereference and hence the access violation exception.
Anirudh Vempati added the
Severity
Normal
Status
Needs Triage
Type
Bug
labels 2024-09-27 15:45:32 +02:00
Member

Lowering the severity of this issue since the crash was based on the assets being in a weird state when setting the repo up (mentioned in the linked PR)

Lowering the severity of this issue since the crash was based on the assets being in a weird state when setting the repo up (mentioned in the linked PR)
Sean Kim added
Severity
Normal
and removed
Severity
High
labels 2024-09-30 17:51:17 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-10-01 00:05:15 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#128257
No description provided.