Fix #128257: Set Vertex Colors with no brush null pointer dereference