source/blender/editors/sculpt_paint/paint_vertex.cc
@@ -652,9 +652,15 @@ bool vertex_paint_poll_ignore_tool(bContext *C)
   return vertex_paint_poll_ex(C, false);
 }
 
-static ColorPaint4f vpaint_get_current_col(Scene &scene, VPaint &vp, bool secondary)
+static bool vpaint_get_current_col(Scene &scene,
+                                   VPaint &vp,
+                                   bool secondary,
+                                   ColorPaint4f *r_paintcol)
 {
   const Brush *brush = BKE_paint_brush_for_read(&vp.paint);
+  if (brush == nullptr) {
+    return false;
+  }
   float color[4];
   const float *brush_color = secondary ? BKE_brush_secondary_color_get(&scene, brush) :
                                          BKE_brush_color_get(&scene, brush);
@@ -662,7 +668,8 @@ static ColorPaint4f vpaint_get_current_col(Scene &scene, VPaint &vp, bool second
 
   color[3] = 1.0f; /* alpha isn't used, could even be removed to speedup paint a little */
 
-  return ColorPaint4f(color);
+  *r_paintcol = ColorPaint4f(color);
+  return true;
 }
 
 /* wpaint has 'wpaint_blend' */
@@ -953,8 +960,8 @@ static std::unique_ptr<VPaintData> vpaint_init_vpaint(bContext *C,
                                   brush.falloff_angle,
                                   (brush.flag & BRUSH_FRONTFACE_FALLOFF) != 0);
 
-  vpd->paintcol = vpaint_get_current_col(
-      scene, vp, (RNA_enum_get(op->ptr, "mode") == BRUSH_STROKE_INVERT));
+  vpaint_get_current_col(
+      scene, vp, (RNA_enum_get(op->ptr, "mode") == BRUSH_STROKE_INVERT), &vpd->paintcol);
 
   vpd->is_texbrush = !(brush.vertex_brush_type == VPAINT_BRUSH_TYPE_BLUR) && brush.mtex.tex;
 
@@ -2288,7 +2295,11 @@ static int vertex_color_set_exec(bContext *C, wmOperator *op)
     return OPERATOR_CANCELLED;
   }
 
-  ColorPaint4f paintcol = vpaint_get_current_col(scene, *scene.toolsettings->vpaint, false);
+  ColorPaint4f paintcol;
+  if (!vpaint_get_current_col(scene, *scene.toolsettings->vpaint, false, &paintcol)) {
+    return OPERATOR_CANCELLED;
+  }
+
   const bool affect_alpha = RNA_boolean_get(op->ptr, "use_alpha");
 
   /* Ensure valid sculpt state. */
